# patbot

./: .gitignore  .ignore  Cargo.toml
src/: data.rs  interactive.rs  macros.rs  main.rs
src/commands/: counter.rs  dice.rs  dynamic.rs  mod.rs  petition.rs  poll.rs  simple.rs  utils.rs  voice.rs
