[package]
name = "patbot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
dotenv = "0.15"
once_cell = "1.19"
parse-display = "0.9"
poise = "0.6"
rand = "0.8"
reqwest = "0.12"
rust-dice = { git = "https://github.com/Steelbirdy/rust-dice", branch = "dev" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shuttle-persist = "0.44"
shuttle-runtime = "0.44"
shuttle-serenity = "0.44"
time = "0.3"
tracing = "0.1"
