[package]
name = "patbot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
dotenv = "0.15"
parse-display = "0.10"
poise = "0.6"
rand = "0.9"
rust-dice = { git = "https://github.com/Steelbirdy/rust-dice", branch = "dev" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shuttle-persist = "0.51"
shuttle-runtime = "0.51"
shuttle-serenity = "0.51"
time = "0.3"
tracing = "0.1"
